package Persons;

public interface Hireable {
    void beHireable();
}
